--- a/docs/notebooks/Tutorial.ipynb
+++ b/docs/notebooks/Tutorial.ipynb
@@ -7823,11 +7823,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Analysis tools\n",
-    "\n",
-    "We plan to expand built-in analysis tools in the future. For now we support automating phylogenetic inference on simulated loci which makes it very fast and easy to compare true genealogies with the best inference that can be made from simulated sequence data.  \n",
-    "\n",
-    "#### Inferring gene trees from sequences\n",
+    "### Inferring gene trees from sequences\n",
     "To infer a gene tree at every locus in a dataset simply call the Model function `.infer_gene_trees()`. This will concatenate data at every locus and send the alignment to a phylogenetic inference program (default is raxml) and store the results in a new column of the results table labeled \"inferred_tree\". Take note that only one tree is inferred per locus, not per genealogical block, so the same inferred tree is represented in multiple rows on the results table."
    ]
   },
@@ -8092,7 +8088,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Downstream analyses\n",
+    "### Analysis tools\n",
     "There are many possibilities for further downstream analysis using either the sequence and/or true and inferred trees at linked or unlinked regions across the genome. More coming soon."
    ]
   }
