made some final edits, including finishing caption and fixing some small working and formatting things.

--- a/manuscript/ipcoal-biorxiv.bib
+++ b/manuscript/ipcoal-biorxiv.bib
@@ -122,16 +122,10 @@
 }
 
 @book{reich_who_2018,
-	edition = {Unabridged MP3CD edition},
-	title = {Who {We} {Are} and {How} {We} {Got} {Here}: {Ancient} {DNA} and the {New} {Science} of the {Human} {Past}},
-	isbn = {978-1-982541-24-8},
-	shorttitle = {Who {We} {Are} and {How} {We} {Got} {Here}},
-	abstract = {A groundbreaking book about how ancient DNA has profoundly changed our understanding of human historyGeneticists like David Reich have made astounding advances in the field of genomics, which is proving to be as important as archaeology, linguistics, and written records as a means to understand our ancestry. In Who We Are and How We Got Here, Reich allows listeners to discover how the human genome provides not only all the information a human embryo needs to develop but also the hidden story of our species. Reich delves into how the genomic revolution is transforming our understanding of modern humans and how DNA studies reveal deep inequalities among different populations, between the sexes, and among individuals. Provocatively, Reich's book suggests that there might very well be biological differences among human populations but that these differences are unlikely to conform to common stereotypes.Drawing upon revolutionary findings and unparalleled scientific studies, Who We Are and How We Got Here is a captivating glimpse into humankind--where we came from and what that says about our lives today.},
-	language = {English},
-	publisher = {Blackstone Audio},
-	author = {Reich, David},
-	month = jun,
-	year = {2018}
+  title={Who we are and how we got here: Ancient DNA and the new science of the human past},
+  author={Reich, David},
+  year={2018},
+  publisher={Oxford University Press}
 }
 
 @article{eaton_ipyrad_2020,
