--- a/manuscript/ipcoal-biorxiv.tex
+++ b/manuscript/ipcoal-biorxiv.tex
@@ -81,14 +81,15 @@ $^{2}$ To whom correspondence should be addressed
 \bigskip
 
 \section{Introduction}
-The coalescent process \citep{hudson_testing_1983,kingman_coalescent_1982} is used to model the distribution of genealogical ancestry across a set of sampled genomes. It approximates a neutral Wright-Fisher process of random mating within populations where the expected waiting times between subsequent coalescent events can be drawn from a statistical distribution based on the effective population size. For this reason, simulation of genealogies under the coalescent process \citep{hudson_generating_2002} is a computationally efficient approach for integrating over genealogical variation (i.e., treating it as a latent random variable) when making population genetic inferences \citep{beerli_coalescent_2001}. 
+The coalescent process \citep{hudson_testing_1983,kingman_coalescent_1982} is used to model the distribution of genealogical ancestry across a set of sampled genomes. It approximates a neutral Wright-Fisher process of random mating within populations where the expected waiting times between subsequent coalescent events can be drawn from a statistical distribution based on the effective population size. This makes simulation of genealogies under the coalescent process \citep{hudson_generating_2002} a computationally efficient approach for integrating over genealogical variation (i.e., treating it as a latent random variable) when making population genetic inferences \citep{beerli_coalescent_2001}. 
 
 Demographic models specify the parameters of a coalescent simulation. Highly complex models may include population sizes and divergence times, and gene flow (admixture) between populations. For example, in the study of human history, a demographic model may describe divergences among different continents, the expansion of populations separately in Africa, Eurasia, and the Americas, and subsequent admixture between them \citep{reich_who_2018,gronau_demography_2011,green_neandertal_2010}. Demographic models are also routinely used in phylogenetics, with the goal of inferring a topology (i.e., the relationships among connected populations) in addition to the parameters of a demographic model applied to the topology \citep{knowles_estimating_2011,degnan_gene_2009}. 
 
-The ability to simulate realistic sequence data evolving on genealogies sampled from complex demographic models has enabled new types of inference from genomic data, from fitting parameters to demographic models and performing model comparisons \citep{chung_bayesian_2017}; to performing posterior predictive data analyses \citep{brown_predictive_2014}; to generating training datasets for machine learning methods \citep{schrider_learning_2017}; to validating new inference methods \citep{adrion_community_maintained_2019}. Despite the impressive capabilities of recent state-of-the-art coalescent simulation tools like \emph{msprime} \citep{kelleher_efficient_2016}, it is difficult for a single package to be optimized for all types of use. To this end, \emph{msprime} lacks functionality in ways that limit its utility for studying deeper-scale (e.g., phylogenetic) datasets. Here we describe a new Python package, \emph{ipcoal}, which wraps around \emph{msprime} with the aim of filling this niche: to provide a simple method for simulating genealogies and sequences on species trees or networks for phylogenetic-scale analyses.
+The ability to simulate realistic sequence data evolving on genealogies sampled from complex demographic models has enabled new types of inference from genomic data, from fitting parameters to demographic models and performing model comparisons \citep{chung_bayesian_2017}; to performing posterior predictive data analyses \citep{brown_predictive_2014}; to generating training datasets for machine learning methods \citep{schrider_learning_2017}; to validating new inference methods \citep{adrion_community_maintained_2019}. Despite the impressive capabilities of recent state-of-the-art coalescent simulation tools like \emph{msprime} \citep{kelleher_efficient_2016}, it is difficult for a single package to be optimized for all types of use. To this end, \emph{msprime} lacks functionality in ways that limit its utility for studying deeper-scale (e.g., phylogenetic) datasets. Here we describe a new Python package, \emph{ipcoal}, which wraps around \emph{msprime} with the aim of filling this niche: to provide a simple method for simulating genealogies and sequences on species trees or networks.
+ % for phylogenetic-scale analyses.
 
 \section{Phylogenomic data simulation}
-We make the following distinctions among terms in \emph{ipcoal}: a genealogy is the true history of ancestry among a set of sampled genes; a gene tree is an empirical estimate of a genealogy based on sequences from some region of the genome; and a species tree is a demographic model including a topology \citep{maddison_gene_1997,pamilo_relationships_1988}. As phylogenetics transitions from a focus on multi-locus data sets \citep{knowles_estimating_2011} to the analysis of whole genomes -- and the spatial distribution of correlated genealogical variation along chromosomes -- the distinction that we highlight in \emph{ipcoal} between unobservable genealogical variation and the empirical gene tree estimates that can be made from observable sequence data will become increasingly relevant \citep{adams_binning_2019,posada_recombination_2002}. 
+We make the following distinctions among terms in \emph{ipcoal}: a genealogy is the true history of ancestry among a set of sampled genes; a gene tree is an empirical estimate of a genealogy based on sequences from some region of the genome; and a species tree is a demographic model including a topology \citep{maddison_gene_1997,pamilo_relationships_1988}. As phylogenetics transitions from a focus on multi-locus data sets \citep{knowles_estimating_2011} to the analysis of whole genomes -- and the spatial distribution of correlated genealogical variation along chromosomes -- these distinctions that we highlight in \emph{ipcoal}, between unobservable genealogical variation and the empirical gene tree estimates that can be made from observable sequence data, will become increasingly relevant \citep{adams_binning_2019,posada_recombination_2002}. 
 
 Simulating realistic sequence data under the multispecies coalescent model has typically involved a two-step approach: a set of independent genealogies is first simulated, and then a model of sequence evolution is applied along the edges of each tree to produce sequence alignments. This phylogenetic workflow differs from standard population-level coalescent simulations in several ways: (1) phylogenies generally contain many more lineages than population genetic models which makes describing them to coalescent simulators burdensome and error-prone; (2) the phylogenetic workflow typically ignores recombination, but such data can now be simulated easily by modern coalescent software; and (3) the phylogenetic workflow applies a Markov model of sequence evolution rather than the more simple infinite-sites process, allowing for homoplasy and asymmetrical substitution rates. In \emph{ipcoal} we have combined the best aspects of each approach so that it is easy to describe demographic models for large trees, to simulate independent or linked genealogies, and to generate sequences under complex models of sequence evolution. 
 
@@ -104,7 +105,7 @@ The primary object that users interact with in \emph{ipcoal} is the \texttt{Mode
 Many inference tools require the input of unlinked single nucleotide polymorphisms (SNPs) to circumvent the effect of recombination (e.g., SVDquartets \citep{chifman_quartets_2014} and SNAPP \citep{bryant_snapp_2012}). \emph{ipcoal} can generate a distribution of independent genealogies, and unlinked SNPs evolved on those genealogies, using the \texttt{Model.sim\_snps()} function call (Fig. 1c-d). Notably, we take care that the probability with which a substitution is observed is proportional to the total edge lengths of the genealogy by testing each genealogy for a SNP and moving on to the next independently sampled genealogy if a SNP is not observed. By contrast, users can alternatively toggle the option to enforce a SNP placement on every visited genealogy, which will increase the speed of simulations but introduce a bias toward shallower divergence times. 
 
 \subsection{Simulating loci}
-The \texttt{ipcoal.Model} object can also simulate entire chromosomes (loci) with recombination by calling the \texttt{Model.sim\_loci()} function. This produces sequences of linked genealogies. Nearby genealogies are correlated since some samples share the same ancestors at neighboring genomic regions, and thus are more similar in topology and edge lengths than unlinked trees (Fig. 1d). This type of variation is increasingly of interest for genome-wide analyses.
+The \texttt{Model} object can also simulate entire chromosomes (loci) with or without recombination by calling the \texttt{Model.sim\_loci()} function. This produces sequences of linked genealogies. Nearby genealogies are correlated since some samples share the same ancestors at neighboring genomic regions, and thus are more similar in topology and edge lengths than unlinked trees (Fig. 1d). This type of variation is increasingly of interest for genome-wide analyses.
 
 \subsection{Simulating sequence evolution}
 To simulate sequence data on genealogies in \emph{ipcoal}, a continuous-time Markov substitution model is applied iteratively to each edge of the tree from root to tips. We have implemented our own sequence simulator using just-in-time compiled Python code to achieve high performance. We additionally provide the option of using the external tool \emph{seq-sen} \citep{rambaut_seqgen_1997}, which offers a larger range of models than we currently support. Our internal implementation is used by default since it achieves faster speeds by avoiding repeated subprocess calls. The documentation includes test notebooks demonstrating that our implementation converges to the same results as \emph{seq-sen}.
@@ -120,7 +121,10 @@ Coalescent simulations for studying genome-wide patterns are routinely used in p
   \centering
   %%\fbox{\rule[-.5cm]{4cm}{4cm} \rule[-.5cm]{4cm}{0cm}}
   \includegraphics[width=15cm]{figures/composite.pdf}
-  \caption{Simulation of coalescent genealogies and sequence data in \emph{ipcoal}. A species tree can be entered as a newick file or as a \emph{toytree} object with edge lengths in units of generations. A single Ne value can be set to all nodes, or variable Nes can be applied by mapping values to nodes using \emph{toytree}. (a) The model class object of \emph{ipcoal} is used to initialize parameterized demographic and mutational models. Simulated genealogies can sample multiple individuals per population. (b) Genealogical variation across the genome will reflect parameterized processes like genealogical discordance and admixture. (c-d) Sequence data can be simulated as unlinked SNPs or as genomic segments in which recombination affects linkage among neighboring genealogies. (e-f) Simulated sequences can be written to files (either concatenated or as separate loci) for downstream analyses, or the sequences can be used to directly infer gene trees using convenience functions that call external inference programs. A data frame summarizing the simulated and inferred results can also be accessed directly or written to a CSV file.}
+  \caption{Simulation of coalescent genealogies and sequence data in \emph{ipcoal}. A species tree can be generated or loaded from a newick string to define population relationships in a demographic model, and a single Ne value or variable Nes can be applied to nodes by mapping values using \emph{toytree}. The Model class object of \emph{ipcoal} is used to initialize parameterized demographic and mutational models (a). Genealogical variation reflects parameters of the demographic model including Ne and admixture events, each of which can be easily visualized for validation (b). Sequence data can be simulated as unlinked SNPs (c) or as continuous loci in which recombination affects linkage among neighboring genealogies (d). Simulated sequences can be written to files (either concatenated or as separate loci) for downstream analyses, or the sequences can be used to directly infer gene trees (e). Simulated and inferred results are organized into dataframes for further analyses (f).
+  % using convenience functions that call external inference programs. 
+  % A dataframe summarizing simulated and inferred results  can be accessed directly for further analyses or written to a CSV file.}
+  }
   \label{fig:fig1}
 \end{figure}
 
