binder link fix

--- a/docs/notebooks/Tutorial.ipynb
+++ b/docs/notebooks/Tutorial.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Tutorial\n",
     "\n",
-    "Optional: [click here to run this tutorial interactively in the cloud -- (coming soon)](...) on a free service called binder. This allows you to test out *ipcoal* without having to even install it. \n",
+    "Optional: [click here to run this tutorial interactively in the cloud](https://mybinder.org/v2/gh/eaton-lab/ipcoal/master?filepath=docs%2Fnotebooks%2FTutorial.ipynb) on a free service called binder. This allows you to test out *ipcoal* without having to even install it. \n",
     "\n",
     "### Getting started\n",
     "Welcome to the quick guide tutorial for *ipcoal*. This page is intended to introduce major concepts of coalescent simulation, and to \n",
