added revision, and small docs edit

--- a/docs/notebooks/Tutorial.ipynb
+++ b/docs/notebooks/Tutorial.ipynb
@@ -18,7 +18,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import ipcoal\n",
@@ -53,7 +55,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# generate a random tree with 8 tips and height of 1M generations\n",
@@ -513,7 +517,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# initialize a model object given a species tree and Ne setting.\n",
@@ -556,7 +562,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# simulate unlinked genealogies \n",
@@ -588,7 +596,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# simulate linked genealogies\n",
@@ -2140,7 +2150,9 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# create two models that differ in Ne\n",
@@ -2151,7 +2163,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# simulate n genealogies for each model\n",
@@ -3337,7 +3351,7 @@
    "metadata": {},
    "source": [
     "#### Defining an admixture event\n",
-    "In both *ipcoal* and *toytree* you define an admixture event with a 4-part tuple of arguments. This designates the <span style=\"color:darkred;font-weight:800\">(source, destination, time, rate)</span>. In simulations you will need to provide all four arguments, but for tree drawings you only need to provide the first two and the latter two will be automated to make it look nice. So let's try first to draw an admixture edge.\n",
+    "In both *ipcoal* and *toytree* you define an admixture event with a 4-part tuple of arguments. This designates the <span style=\"color:darkred;font-weight:800\">(source, destination, time, rate)</span> for pulsed migration. Additionally, you can specify an interval over which migration occurs at a uniform rate, i.e. <span style=\"color:darkred;font-weight:800\">(source, dest, (time_min, time_max), rate)</span>, and specifying `admixture_type=\"interval\"`. In simulations you will need to provide all four arguments, but for tree drawings you only need to provide the first two and the latter two will be automated to make it look nice. So let's try first to draw an admixture edge.\n",
     "\n",
     "This is done by supplying the event tuple to the `admixture_edges` argument. Here the source and destination refer to the index (idx) numeric labels of each node (which you find by drawing the tree). You can see that the admixture edge is not simply a horizontal line, but it follows the edges towards the tips of the source node and towards the ancestors from the destination node. \n",
     "\n",
@@ -3824,7 +3838,9 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# a Model with admixture from 3-8\n",
@@ -3838,7 +3854,9 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# simulate 100 unlinked genealogies under this model\n",
@@ -7587,7 +7605,9 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# create a Model and simulate a 1Kb locus\n",
@@ -7728,7 +7748,9 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# simulate 10 loci each 500bp in length\n",
@@ -8119,7 +8141,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
